welcome.lessons.welcome.array.array123.Array123.scala.code
def array123(nums:Array[Int]): Boolean = {
  for (i <- nums) {
    if (nums.length >= i+3 && nums(i) == 1 && nums(i+1) == 2 && nums(i+2) == 3) {
      return true
    }
    else {
      return false
    }
  }
}
  